tests/fixtures/syntax_status_after_assign.stderr
Error in tests/fixtures/syntax_status_after_assign.sh2:3:5
Error in tests/fixtures/syntax_status_after_assign.sh2:3:5
Error in tests/fixtures/syntax_status_after_assign.sh2:3:5
